--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T20:39:59.423234Z",
-     "iopub.status.busy": "2021-10-30T20:39:59.423234Z",
-     "iopub.status.idle": "2021-10-30T20:39:59.440229Z",
-     "shell.execute_reply": "2021-10-30T20:39:59.439228Z",
-     "shell.execute_reply.started": "2021-10-30T20:39:59.423234Z"
+     "iopub.execute_input": "2021-11-05T02:22:35.855105Z",
+     "iopub.status.busy": "2021-11-05T02:22:35.855105Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.384101Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.383100Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:35.855105Z"
     }
    },
    "outputs": [],
@@ -19,14 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T20:39:59.442232Z",
-     "iopub.status.busy": "2021-10-30T20:39:59.442232Z",
-     "iopub.status.idle": "2021-10-30T20:39:59.471231Z",
-     "shell.execute_reply": "2021-10-30T20:39:59.470231Z",
-     "shell.execute_reply.started": "2021-10-30T20:39:59.442232Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.386102Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.385102Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.433102Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.431103Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.386102Z"
     }
    },
    "outputs": [
@@ -66,7 +66,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T20:39:59.475234Z",
-     "iopub.status.busy": "2021-10-30T20:39:59.474234Z",
-     "iopub.status.idle": "2021-10-30T20:39:59.505228Z",
-     "shell.execute_reply": "2021-10-30T20:39:59.502231Z",
-     "shell.execute_reply.started": "2021-10-30T20:39:59.475234Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.436102Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.436102Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.480109Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.478105Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.436102Z"
     }
    },
    "outputs": [
@@ -129,7 +129,7 @@
        "0       z     100"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T20:39:59.513232Z",
-     "iopub.status.busy": "2021-10-30T20:39:59.511232Z",
-     "iopub.status.idle": "2021-10-30T20:39:59.551232Z",
-     "shell.execute_reply": "2021-10-30T20:39:59.550230Z",
-     "shell.execute_reply.started": "2021-10-30T20:39:59.513232Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.489109Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.484109Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.511103Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.509104Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.489109Z"
     }
    },
    "outputs": [],
@@ -160,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T20:39:59.555233Z",
-     "iopub.status.busy": "2021-10-30T20:39:59.554232Z",
-     "iopub.status.idle": "2021-10-30T20:39:59.647234Z",
-     "shell.execute_reply": "2021-10-30T20:39:59.646232Z",
-     "shell.execute_reply.started": "2021-10-30T20:39:59.555233Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.515114Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.513107Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.591106Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.589106Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.515114Z"
     }
    },
    "outputs": [
@@ -241,7 +241,7 @@
        "5       e       5"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,14 +255,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T21:21:20.056043Z",
-     "iopub.status.busy": "2021-10-30T21:21:20.049045Z",
-     "iopub.status.idle": "2021-10-30T21:21:20.133048Z",
-     "shell.execute_reply": "2021-10-30T21:21:20.130045Z",
-     "shell.execute_reply.started": "2021-10-30T21:21:20.055042Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.595106Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.595106Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.623107Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.621113Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.595106Z"
     }
    },
    "outputs": [],
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T21:22:18.496361Z",
-     "iopub.status.busy": "2021-10-30T21:22:18.495362Z",
-     "iopub.status.idle": "2021-10-30T21:22:18.529360Z",
-     "shell.execute_reply": "2021-10-30T21:22:18.528358Z",
-     "shell.execute_reply.started": "2021-10-30T21:22:18.496361Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.627105Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.626107Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.641106Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.637120Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.627105Z"
     }
    },
    "outputs": [],
@@ -293,14 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-10-30T21:22:35.308447Z",
-     "iopub.status.busy": "2021-10-30T21:22:35.307447Z",
-     "iopub.status.idle": "2021-10-30T21:22:35.363448Z",
-     "shell.execute_reply": "2021-10-30T21:22:35.362445Z",
-     "shell.execute_reply.started": "2021-10-30T21:22:35.308447Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.647113Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.646105Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.718109Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.716107Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.646105Z"
     }
    },
    "outputs": [
@@ -368,7 +368,7 @@
        "4       e       5"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,14 +379,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-01T21:33:00.652347Z",
-     "iopub.status.busy": "2021-11-01T21:33:00.652347Z",
-     "iopub.status.idle": "2021-11-01T21:33:00.663348Z",
-     "shell.execute_reply": "2021-11-01T21:33:00.661345Z",
-     "shell.execute_reply.started": "2021-11-01T21:33:00.652347Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.723111Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.722108Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.735108Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.732105Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.723111Z"
     }
    },
    "outputs": [],
@@ -396,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-01T21:33:05.705462Z",
-     "iopub.status.busy": "2021-11-01T21:33:05.704461Z",
-     "iopub.status.idle": "2021-11-01T21:33:05.723463Z",
-     "shell.execute_reply": "2021-11-01T21:33:05.722460Z",
-     "shell.execute_reply.started": "2021-11-01T21:33:05.705462Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.740108Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.738119Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.765106Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.763107Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.739117Z"
     }
    },
    "outputs": [],
@@ -413,14 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-01T21:33:06.133149Z",
-     "iopub.status.busy": "2021-11-01T21:33:06.132147Z",
-     "iopub.status.idle": "2021-11-01T21:33:06.155145Z",
-     "shell.execute_reply": "2021-11-01T21:33:06.153145Z",
-     "shell.execute_reply.started": "2021-11-01T21:33:06.133149Z"
+     "iopub.execute_input": "2021-11-05T02:22:37.769103Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.768106Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.797108Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.794105Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.769103Z"
     }
    },
    "outputs": [
@@ -430,7 +430,7 @@
        "[1, 3, 2]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,10 +441,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-05T02:22:37.801114Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.799109Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.812113Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.809111Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.801114Z"
+    }
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk import word_tokenize, FreqDist\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-05T02:22:37.815107Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.815107Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.858108Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.856106Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.815107Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', '<', 'CH', '>', ',', 'goodbye', '<', 'SH', '>']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = 'hello <CH>, goodbye <SH>'\n",
+    "word_tokenize(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-05T02:22:37.861109Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.860105Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.891105Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.888103Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.861109Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<CH>', '<SH>']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(\"\\<\\w+>\", string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-05T02:22:37.928105Z",
+     "iopub.status.busy": "2021-11-05T02:22:37.926105Z",
+     "iopub.status.idle": "2021-11-05T02:22:37.955107Z",
+     "shell.execute_reply": "2021-11-05T02:22:37.951105Z",
+     "shell.execute_reply.started": "2021-11-05T02:22:37.928105Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', '<CH>,', 'goodbye', '<SH>']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-05T02:28:32.273869Z",
+     "iopub.status.busy": "2021-11-05T02:28:32.273869Z",
+     "iopub.status.idle": "2021-11-05T02:28:32.290872Z",
+     "shell.execute_reply": "2021-11-05T02:28:32.288866Z",
+     "shell.execute_reply.started": "2021-11-05T02:28:32.273869Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def reserve_tickers(string):\n",
+    "    tickers = re.findall(\"\\<\\w+>\", string)\n",
+    "    split_string = string.split()\n",
+    "\n",
+    "    for element in split_string:\n",
+    "        if element in tickers:\n",
+    "            print(element)\n",
+    "            split_string.remove(element)\n",
+    "    \n",
+    "    return tickers, split_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-05T02:28:33.151872Z",
+     "iopub.status.busy": "2021-11-05T02:28:33.150872Z",
+     "iopub.status.idle": "2021-11-05T02:28:33.174869Z",
+     "shell.execute_reply": "2021-11-05T02:28:33.173872Z",
+     "shell.execute_reply.started": "2021-11-05T02:28:33.151872Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<SH>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(['<CH>', '<SH>'], ['hello', '<CH>,', 'goodbye'])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reserve_tickers(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-05T02:27:00.783570Z",
+     "iopub.status.busy": "2021-11-05T02:27:00.783570Z",
+     "iopub.status.idle": "2021-11-05T02:27:00.797571Z",
+     "shell.execute_reply": "2021-11-05T02:27:00.796572Z",
+     "shell.execute_reply.started": "2021-11-05T02:27:00.783570Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_1 = [\"a\", \"b\"]\n",
+    "list_2 = [\"a\", \"b\", \"c\"]\n",
+    "\n",
+    "for element in list_1:\n",
+    "    if element in list_2:\n",
+    "        list_2.remove(element)\n",
+    "\n",
+    "print(list_2)"
+   ]
   }
  ],
  "metadata": {
