--- a/playground2.ipynb
+++ b/playground2.ipynb
@@ -190,6 +190,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-08T23:02:36.452217Z",
+     "iopub.status.busy": "2021-11-08T23:02:36.451218Z",
+     "iopub.status.idle": "2021-11-08T23:02:36.506213Z",
+     "shell.execute_reply": "2021-11-08T23:02:36.504213Z",
+     "shell.execute_reply.started": "2021-11-08T23:02:36.451218Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "num_categories = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-08T23:08:52.327977Z",
+     "iopub.status.busy": "2021-11-08T23:08:52.327977Z",
+     "iopub.status.idle": "2021-11-08T23:08:52.344976Z",
+     "shell.execute_reply": "2021-11-08T23:08:52.343976Z",
+     "shell.execute_reply.started": "2021-11-08T23:08:52.327977Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(3):\n",
+    "    print(x +1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-08T23:09:32.074187Z",
+     "iopub.status.busy": "2021-11-08T23:09:32.073156Z",
+     "iopub.status.idle": "2021-11-08T23:09:32.102156Z",
+     "shell.execute_reply": "2021-11-08T23:09:32.100158Z",
+     "shell.execute_reply.started": "2021-11-08T23:09:32.074187Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_list =[x + 1 for x in range(3)]\n",
+    "new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
