working on blog post

--- a/blog_walkthrough.ipynb
+++ b/blog_walkthrough.ipynb
@@ -15,11 +15,11 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-23T02:29:14.684382Z",
-     "iopub.status.busy": "2022-02-23T02:29:14.683384Z",
-     "iopub.status.idle": "2022-02-23T02:29:16.758379Z",
-     "shell.execute_reply": "2022-02-23T02:29:16.756417Z",
-     "shell.execute_reply.started": "2022-02-23T02:29:14.684382Z"
+     "iopub.execute_input": "2022-02-24T22:54:21.557734Z",
+     "iopub.status.busy": "2022-02-24T22:54:21.557734Z",
+     "iopub.status.idle": "2022-02-24T22:54:26.291841Z",
+     "shell.execute_reply": "2022-02-24T22:54:26.289829Z",
+     "shell.execute_reply.started": "2022-02-24T22:54:21.557734Z"
     }
    },
    "outputs": [],
@@ -248,6 +248,101 @@
    "source": [
     "all_headlines[0:4]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NLP Project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-24T23:34:10.014344Z",
+     "iopub.status.busy": "2022-02-24T23:34:10.004338Z",
+     "iopub.status.idle": "2022-02-24T23:34:10.188312Z",
+     "shell.execute_reply": "2022-02-24T23:34:10.187318Z",
+     "shell.execute_reply.started": "2022-02-24T23:34:10.013330Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE lewis SYSTEM \"lewis.dtd\">\\n<REUTERS TOPICS=\"YES\" LEWISSPLIT=\"TRAIN\" CGISPLIT=\"TRAINING-SET\" OLDID=\"5544\" NEWID=\"1\">\\n<DATE>26-FEB-1987 15:01:01.79</DATE>\\n<TOPICS><D>cocoa</D></TOPICS>\\n<PLACES><D>el-salvador</D><D>usa</D><D>uruguay</D></PLACES>\\n<PEOPLE></PEOPLE>\\n<ORGS></ORGS>\\n<EXCHANGES></EXCHANGES>\\n<COMPANIES></COMPANIES>\\n<UNKNOWN> \\n&#5;&#5;&#5;C T\\n&#22;&#22;&#1;f0704&#31;reute\\nu f BC-BAHIA-COCOA-REVIEW   02-26 0105</UNKNOWN>\\n<TEXT>&#2;\\n<TITLE>BAHIA COCOA REVIEW</TITLE>\\n<DATELINE>    SALVADOR, Feb 26 - </DATELINE><BODY>Showers continued throughout the week in\\nthe Bahia cocoa zone, alleviating the drought since early\\nJanuary and improving prospects for the coming temporao,\\nalthough normal humidity levels have not been restored,\\nComissaria Smith said in its weekly review.\\n    The dry period means the temporao will be late this year.\\n    Arrivals for the week ended February 22 were 155,221 bags\\nof 60 kilos making a cumulative total for the season of 5.93\\nmln against 5.81 at the sa'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open('data_files/reut2-000.sgm', encoding='utf-8', errors='ignore')\n",
+    "dataFile = f.read()\n",
+    "dataFile[0:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-02-24T23:43:53.785559Z",
+     "iopub.status.busy": "2022-02-24T23:43:53.785559Z",
+     "iopub.status.idle": "2022-02-24T23:43:54.559528Z",
+     "shell.execute_reply": "2022-02-24T23:43:54.558527Z",
+     "shell.execute_reply.started": "2022-02-24T23:43:53.785559Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE lewis SYSTEM \"lewis.dtd\">\n",
+      "<html>\n",
+      " <body>\n",
+      "  <reuters cgisplit=\"TRAINING-SET\" lewissplit=\"TRAIN\" newid=\"1\" oldid=\"5544\" topics=\"YES\">\n",
+      "   <date>\n",
+      "    26-FEB-1987 15:01:01.79\n",
+      "   </date>\n",
+      "   <topics>\n",
+      "    <d>\n",
+      "     cocoa\n",
+      "    </d>\n",
+      "   </topics>\n",
+      "   <places>\n",
+      "    <d>\n",
+      "     el-salvador\n",
+      "    </d>\n",
+      "    <d>\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(dataFile, 'lxml')\n",
+    "content = soup.prettify()\n",
+    "print(content[0:300])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
