working on blog post

--- a/interos_NLP_H_Alpert.ipynb
+++ b/interos_NLP_H_Alpert.ipynb
@@ -694,7 +694,7 @@
     "        for word in topic:\n",
     "            article_topics += (word + ' ')\n",
     "            \n",
-    "        # assign correct topic \n",
+    "        # assign desired topic \n",
     "        if not article_topics:\n",
     "            topic_list[i] = 'blank'\n",
     "        elif 'earn' in article_topics:\n",
