working on blog post

--- a/blog_walkthrough.ipynb
+++ b/blog_walkthrough.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T21:20:09.700323Z",
-     "iopub.status.busy": "2022-02-25T21:20:09.700323Z",
-     "iopub.status.idle": "2022-02-25T21:20:09.705325Z",
-     "shell.execute_reply": "2022-02-25T21:20:09.704324Z",
-     "shell.execute_reply.started": "2022-02-25T21:20:09.700323Z"
+     "iopub.execute_input": "2022-02-28T23:22:03.662314Z",
+     "iopub.status.busy": "2022-02-28T23:22:03.662314Z",
+     "iopub.status.idle": "2022-02-28T23:22:05.268617Z",
+     "shell.execute_reply": "2022-02-28T23:22:05.267560Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:03.662314Z"
     }
    },
    "outputs": [],
@@ -258,14 +258,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:31:22.242974Z",
-     "iopub.status.busy": "2022-02-25T22:31:22.241972Z",
-     "iopub.status.idle": "2022-02-25T22:31:22.268974Z",
-     "shell.execute_reply": "2022-02-25T22:31:22.267970Z",
-     "shell.execute_reply.started": "2022-02-25T22:31:22.242974Z"
+     "iopub.execute_input": "2022-02-28T23:22:14.218490Z",
+     "iopub.status.busy": "2022-02-28T23:22:14.218490Z",
+     "iopub.status.idle": "2022-02-28T23:22:14.233486Z",
+     "shell.execute_reply": "2022-02-28T23:22:14.232487Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:14.218490Z"
     }
    },
    "outputs": [
@@ -275,7 +275,7 @@
        "'<!DOCTYPE lewis SYSTEM \"lewis.dtd\">\\n<REUTERS TOPICS=\"YES\" LEWISSPLIT=\"TRAIN\" CGISPLIT=\"TRAINING-SET\" OLDID=\"5544\" NEWID=\"1\">\\n<DATE>26-FEB-1987 15:01:01.79</DATE>\\n<TOPICS><D>cocoa</D></TOPICS>\\n<PLACES><D>el-salvador</D><D>usa</D><D>uruguay</D></PLACES>\\n<PEOPLE></PEOPLE>\\n<ORGS></ORGS>\\n<EXCHANGES></EXCHANGES>\\n<COMPANIES></COMPANIES>\\n<UNKNOWN> \\n&#5;&#5;&#5;C T\\n&#22;&#22;&#1;f0704&#31;reute\\nu f BC-BAHIA-COCOA-REVIEW   02-26 0105</UNKNOWN>\\n<TEXT>&#2;\\n<TITLE>BAHIA COCOA REVIEW</TITLE>\\n<DATELINE>    SALVADOR, Feb 26 - </DATELINE><BODY>Showers continued throughout the week in\\nthe Bahia cocoa zone, alleviating the drought since early\\nJanuary and improving prospects for the coming temporao,\\nalthough normal humidity levels have not been restored,\\nComissaria Smith said in its weekly review.\\n    The dry period means the temporao will be late this year.\\n    Arrivals for the week ended February 22 were 155,221 bags\\nof 60 kilos making a cumulative total for the season of 5.93\\nmln against 5.81 at the sa'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,14 +288,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:31:23.851961Z",
-     "iopub.status.busy": "2022-02-25T22:31:23.851961Z",
-     "iopub.status.idle": "2022-02-25T22:31:25.874227Z",
-     "shell.execute_reply": "2022-02-25T22:31:25.872220Z",
-     "shell.execute_reply.started": "2022-02-25T22:31:23.851961Z"
+     "iopub.execute_input": "2022-02-28T23:22:14.235489Z",
+     "iopub.status.busy": "2022-02-28T23:22:14.235489Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.167051Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.166049Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:14.235489Z"
     }
    },
    "outputs": [
@@ -332,14 +332,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:31:25.877227Z",
-     "iopub.status.busy": "2022-02-25T22:31:25.877227Z",
-     "iopub.status.idle": "2022-02-25T22:31:25.954228Z",
-     "shell.execute_reply": "2022-02-25T22:31:25.951233Z",
-     "shell.execute_reply.started": "2022-02-25T22:31:25.877227Z"
+     "iopub.execute_input": "2022-02-28T23:22:15.171030Z",
+     "iopub.status.busy": "2022-02-28T23:22:15.170019Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.215016Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.213014Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:15.171030Z"
     }
    },
    "outputs": [
@@ -349,7 +349,7 @@
        "bs4.element.ResultSet"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,14 +361,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:31:28.102221Z",
-     "iopub.status.busy": "2022-02-25T22:31:28.101226Z",
-     "iopub.status.idle": "2022-02-25T22:31:28.138224Z",
-     "shell.execute_reply": "2022-02-25T22:31:28.136222Z",
-     "shell.execute_reply.started": "2022-02-25T22:31:28.102221Z"
+     "iopub.execute_input": "2022-02-28T23:22:15.219020Z",
+     "iopub.status.busy": "2022-02-28T23:22:15.217016Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.279073Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.277074Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:15.219020Z"
     }
    },
    "outputs": [
@@ -387,7 +387,7 @@
        " <topics><d>acq</d></topics>]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,14 +399,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:35:04.343031Z",
-     "iopub.status.busy": "2022-02-25T22:35:04.343031Z",
-     "iopub.status.idle": "2022-02-25T22:35:04.356032Z",
-     "shell.execute_reply": "2022-02-25T22:35:04.355033Z",
-     "shell.execute_reply.started": "2022-02-25T22:35:04.343031Z"
+     "iopub.execute_input": "2022-02-28T23:22:15.282074Z",
+     "iopub.status.busy": "2022-02-28T23:22:15.281099Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.311682Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.308682Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:15.282074Z"
     }
    },
    "outputs": [
@@ -432,7 +432,7 @@
        "  'wheat']]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,14 +453,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T21:51:18.498399Z",
-     "iopub.status.busy": "2022-02-25T21:51:18.498399Z",
-     "iopub.status.idle": "2022-02-25T21:51:18.516398Z",
-     "shell.execute_reply": "2022-02-25T21:51:18.515399Z",
-     "shell.execute_reply.started": "2022-02-25T21:51:18.498399Z"
+     "iopub.execute_input": "2022-02-28T23:22:15.315678Z",
+     "iopub.status.busy": "2022-02-28T23:22:15.314682Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.342678Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.340678Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:15.315678Z"
     }
    },
    "outputs": [],
@@ -486,14 +486,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T21:54:54.198404Z",
-     "iopub.status.busy": "2022-02-25T21:54:54.197405Z",
-     "iopub.status.idle": "2022-02-25T21:54:54.376407Z",
-     "shell.execute_reply": "2022-02-25T21:54:54.374405Z",
-     "shell.execute_reply.started": "2022-02-25T21:54:54.198404Z"
+     "iopub.execute_input": "2022-02-28T23:22:15.347688Z",
+     "iopub.status.busy": "2022-02-28T23:22:15.345680Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.431009Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.430013Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:15.346676Z"
     }
    },
    "outputs": [
@@ -588,7 +588,7 @@
        "[1000 rows x 1 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,14 +602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:11:59.920949Z",
-     "iopub.status.busy": "2022-02-25T22:11:59.920949Z",
-     "iopub.status.idle": "2022-02-25T22:12:00.116949Z",
-     "shell.execute_reply": "2022-02-25T22:12:00.115946Z",
-     "shell.execute_reply.started": "2022-02-25T22:11:59.920949Z"
+     "iopub.execute_input": "2022-02-28T23:22:15.435009Z",
+     "iopub.status.busy": "2022-02-28T23:22:15.434010Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.575571Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.572569Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:15.435009Z"
     }
    },
    "outputs": [],
@@ -636,14 +636,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:20:45.431370Z",
-     "iopub.status.busy": "2022-02-25T22:20:45.430370Z",
-     "iopub.status.idle": "2022-02-25T22:20:45.456367Z",
-     "shell.execute_reply": "2022-02-25T22:20:45.455400Z",
-     "shell.execute_reply.started": "2022-02-25T22:20:45.431370Z"
+     "iopub.execute_input": "2022-02-28T23:22:56.526499Z",
+     "iopub.status.busy": "2022-02-28T23:22:56.526499Z",
+     "iopub.status.idle": "2022-02-28T23:22:56.552423Z",
+     "shell.execute_reply": "2022-02-28T23:22:56.551413Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:56.526499Z"
     }
    },
    "outputs": [
@@ -676,69 +676,100 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>other</td>\n",
-       "      <td>BAHIA COCOA REVIEW SALVADOR, Feb 26 - Showers continued throughout the week in the Bahia cocoa zone, alleviating the drought s...</td>\n",
+       "      <td>BAHIA COCOA REVIEW SALVADOR, Feb 26 - Showers ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>blank</td>\n",
-       "      <td>STANDARD OIL &lt;SRD&gt; TO FORM FINANCIAL UNIT CLEVELAND, Feb 26 - Standard Oil Co and BP North America Inc said they plan to form ...</td>\n",
+       "      <td>STANDARD OIL &lt;SRD&gt; TO FORM FINANCIAL UNIT CLEV...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>blank</td>\n",
-       "      <td>TEXAS COMMERCE BANCSHARES &lt;TCB&gt; FILES PLAN HOUSTON, Feb 26 - Texas Commerce Bancshares Inc's Texas Commerce Bank-Houston said ...</td>\n",
+       "      <td>TEXAS COMMERCE BANCSHARES &lt;TCB&gt; FILES PLAN HOU...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>blank</td>\n",
-       "      <td>TALKING POINT/BANKAMERICA &lt;BAC&gt; EQUITY OFFER by Janie Gabbett, Reuters LOS ANGELES, Feb 26 - BankAmerica Corp is not under pre...</td>\n",
+       "      <td>TALKING POINT/BANKAMERICA &lt;BAC&gt; EQUITY OFFER b...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>other</td>\n",
-       "      <td>NATIONAL AVERAGE PRICES FOR FARMER-OWNED RESERVE WASHINGTON, Feb 26 - The U.S. Agriculture Department reported the farmer-owne...</td>\n",
+       "      <td>NATIONAL AVERAGE PRICES FOR FARMER-OWNED RESER...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>blank</td>\n",
+       "      <td>ASHTON-TATE &lt;TATE&gt; TO OFFER COMMON SHARES TORR...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>blank</td>\n",
+       "      <td>KEYCORP &lt;KEY&gt; REGISTERS SUBORDINATED NOTES ALB...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>earn</td>\n",
+       "      <td>&lt;NATIONAL SEA PRODUCTS LTD&gt; 4TH QTR NET HALIFA...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>other</td>\n",
+       "      <td>U.K. MONEY MARKET SHORTAGE FORECAST REVISED DO...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>other</td>\n",
+       "      <td>NATIONAL AMUSEMENTS AGAIN UPS VIACOM &lt;VIA&gt; BID...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   topic  \\\n",
-       "0  other   \n",
-       "1  blank   \n",
-       "2  blank   \n",
-       "3  blank   \n",
-       "4  other   \n",
+       "     topic                                               text\n",
+       "0    other  BAHIA COCOA REVIEW SALVADOR, Feb 26 - Showers ...\n",
+       "1    blank  STANDARD OIL <SRD> TO FORM FINANCIAL UNIT CLEV...\n",
+       "2    blank  TEXAS COMMERCE BANCSHARES <TCB> FILES PLAN HOU...\n",
+       "3    blank  TALKING POINT/BANKAMERICA <BAC> EQUITY OFFER b...\n",
+       "4    other  NATIONAL AVERAGE PRICES FOR FARMER-OWNED RESER...\n",
+       "..     ...                                                ...\n",
+       "995  blank  ASHTON-TATE <TATE> TO OFFER COMMON SHARES TORR...\n",
+       "996  blank  KEYCORP <KEY> REGISTERS SUBORDINATED NOTES ALB...\n",
+       "997   earn  <NATIONAL SEA PRODUCTS LTD> 4TH QTR NET HALIFA...\n",
+       "998  other  U.K. MONEY MARKET SHORTAGE FORECAST REVISED DO...\n",
+       "999  other  NATIONAL AMUSEMENTS AGAIN UPS VIACOM <VIA> BID...\n",
        "\n",
-       "                                                                                                                                text  \n",
-       "0  BAHIA COCOA REVIEW SALVADOR, Feb 26 - Showers continued throughout the week in the Bahia cocoa zone, alleviating the drought s...  \n",
-       "1  STANDARD OIL <SRD> TO FORM FINANCIAL UNIT CLEVELAND, Feb 26 - Standard Oil Co and BP North America Inc said they plan to form ...  \n",
-       "2  TEXAS COMMERCE BANCSHARES <TCB> FILES PLAN HOUSTON, Feb 26 - Texas Commerce Bancshares Inc's Texas Commerce Bank-Houston said ...  \n",
-       "3  TALKING POINT/BANKAMERICA <BAC> EQUITY OFFER by Janie Gabbett, Reuters LOS ANGELES, Feb 26 - BankAmerica Corp is not under pre...  \n",
-       "4  NATIONAL AVERAGE PRICES FOR FARMER-OWNED RESERVE WASHINGTON, Feb 26 - The U.S. Agriculture Department reported the farmer-owne...  "
+       "[1000 rows x 2 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.set_option(\"max_colwidth\", 130) \n",
     "df['text'] = list_all_text\n",
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-02-25T22:15:45.554382Z",
-     "iopub.status.busy": "2022-02-25T22:15:45.553384Z",
-     "iopub.status.idle": "2022-02-25T22:15:45.573381Z",
-     "shell.execute_reply": "2022-02-25T22:15:45.572382Z",
-     "shell.execute_reply.started": "2022-02-25T22:15:45.554382Z"
+     "iopub.execute_input": "2022-02-28T23:22:15.660567Z",
+     "iopub.status.busy": "2022-02-28T23:22:15.659569Z",
+     "iopub.status.idle": "2022-02-28T23:22:15.686568Z",
+     "shell.execute_reply": "2022-02-28T23:22:15.683566Z",
+     "shell.execute_reply.started": "2022-02-28T23:22:15.660567Z"
     }
    },
    "outputs": [
